--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --mode development --open",
     "analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json dist/",
-    "lint": "eslint . --config eslint.config.mjs"
+    "lint": "eslint . --config .eslintrc.json",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -16,26 +17,28 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-typescript": "^7.24.7",
-    "@typescript-eslint/eslint-plugin": "^8.3.0",
-    "@typescript-eslint/parser": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "csv-loader": "^3.0.5",
-    "eslint": "^9.9.1",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-webpack-plugin": "^4.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "less": "^4.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "less": "^4.2.1",
     "less-loader": "^12.2.0",
     "mini-css-extract-plugin": "^2.9.1",
-    "sass": "^1.77.8",
-    "sass-loader": "^16.0.1",
+    "sass": "^1.83.1",
+    "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.5.4",
-    "webpack": "^5.94.0",
+    "typescript": "^5.7.2",
+    "webpack": "^5.97.1",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
+    "webpack-dev-server": "^5.2.0",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
